[package]
name = "data-pile"
version = "0.3.1"
authors = ["Yevhenii Babichenko <eugene.babichenko@protonmail.com>"]
edition = "2018"
description = "A simple and fast append-only data store"
documentation = "https://docs.rs/data-pile"
readme = "README.md"
homepage = "https://github.com/eugene-babichenko/data-pile"
repository = "https://github.com/eugene-babichenko/data-pile"
license-file = "LICENSE"
keywords = ["append-only", "key-value", "storage", "database"]
categories = ["database"]

[dependencies]
memmap = "0.7.0"

tempfile = { version = "3.1", optional = true }
criterion = { version = "0.3.3", optional = true }
rand = { version = "0.7.3", optional = true }

[dev-dependencies]
tempfile = "3.1"
quickcheck = "0.9"
quickcheck_macros = "0.9"

[features]
with-bench = ["tempfile", "criterion", "rand"]

[[bench]]
harness = false
name = "put_get"
required-features = ["with-bench"]
